# steadystate

./: .gitignore  Cargo.toml  README.md  architecture.html  architecture.md  commands.html  configuration.html  flake.nix  getting_started.html  hosting-collaborative-session.html  hosting-pair-programming.html  index.html  merge-engine.html  self-hosting.html  style.css  troubleshooting.html
.github/workflows/: build-steadystate.yaml  fake-login-test.yml  run-tests.yaml
backend/: Cargo.toml  README.md
backend/flakes/noenv/: flake.nix
backend/src/: jwt.rs  lib.rs  main.rs  models.rs  state.rs
backend/src/auth/: github.rs  gitlab.rs  mod.rs  orchid.rs  provider.rs
backend/src/compute/: local_provider.rs  mod.rs  tests.rs
backend/src/compute/common/: github.rs  scripts.rs  ssh_keys.rs
backend/src/compute/providers/local/: provider.rs
backend/src/routes/: auth.rs  sessions.rs
backend/tests/: integration_compute.rs  test_routes.rs  test_state.rs
cli/: Cargo.toml  README.md
cli/src/: auth.rs  config.rs  main.rs  merge.rs  notify.rs  session.rs  sync.rs
cli/tests/: auth_integration.rs  cli_auth_flow.rs  cli_coverage.rs  no_keyring_test.rs
docs/: _nav.txt  _style.css  _template.html  build.sh  getting-started.md  hosting-collaborative-session.md  hosting-pair-programming.md  self-hosting.md
src/: main.rs
