[package]
name = "steadystate"
version = "0.0.1"
edition = "2025"
authors = ["The Exact Computing Company"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "time", "signal"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "1.2"
dirs = "4.0"
open = "3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
jwt-simple = "0.16"
chrono = { version = "0.4", features = ["serde"] }
